<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">locateMyStickers.com</string>
    <string name="menu_settings">Settings</string>
    <string name="s_eT_login">Login</string>
    <string name="s_eT_password">Password</string>
    <string name="s_btn_auth">Login</string>
    <string name="s_tv_logIn">You must have an account on locateMyStickers.com to use this app.</string>
    <string name="s_btn_map">Map</string>
    <string name="logo_lms_desc">LMS</string>
    <string name="button_menu_stickers">Stickers</string>
    <string name="button_menu_map">Map</string>
    <string name="button_menu_user">User</string>
    <string name="button_menu_search">Search</string>
    <string name="button_user_account_info">Account info</string>
    <string name="button_user_settings">Settings</string>
    <string name="s_eT_name">Name</string>
    <string name="s_eT_active_since">Active since</string>
    <string name="s_eT_LastLocation">Last location</string>
    <string name="s_eT_LastPosition">Last position</string>
    <string name="s_Quest01">Are you sure?</string>
    <string name="s_Msg01">Your are not connected.</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="s_everything">Everything</string>
    <string name="s_stickers">Stickers</string>
    <string name="s_people">People</string>
    <string name="your_stickers">Your stickers</string>
    <string name="pull_to_refresh_tap_label">Loading...</string>
</resources>
