<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/tabDark"
    android:orientation="horizontal"
    android:paddingBottom="3dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="9dp"
    android:tag="menu_fragment"
    android:alpha="0.8">

    <Button
        android:id="@+id/button_menu_stickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/home_white"
        android:text="@string/button_menu_stickers"
        android:textColor="#FFFFFF"
        android:textSize="9sp" />

    <Button
        android:id="@+id/button_menu_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_toLeftOf="@+id/button_menu_scan"
        android:layout_toRightOf="@+id/button_menu_stickers"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/world_white"
        android:text="@string/button_menu_map"
        android:textColor="#FFFFFF"
        android:textSize="9sp" />

    <ImageButton
        android:id="@+id/button_menu_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logo_lms_desc"
        android:src="@drawable/lmslogo" />

    <Button
        android:id="@+id/button_menu_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_toLeftOf="@+id/button_menu_search"
        android:layout_toRightOf="@+id/button_menu_scan"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/account_white"
        android:text="@string/button_menu_user"
        android:textColor="#FFFFFF"
        android:textSize="9sp" />

    <Button
        android:id="@+id/button_menu_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/search_white"
        android:text="@string/button_menu_search"
        android:textColor="#FFFFFF"
        android:textSize="9sp" />

</RelativeLayout>